# Fourier

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  __main__.py  __main__.spec  docker-compose.yml  italic  main.py  myabstract.py  mycolors.py  mycontext.py  mycurves.py  mydraw.py  myfouriervf.py  myinterpolation.py  mymanager.py  mymovinginterpolation.py  myplane.py  myrect.py  mytools.py  mywindow.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
Fourier/: context.py  fourier.py  interpolation.py  movinginterpolation.py  window.py
Fourier/FourierObjects/: Fourier  Marc
FourierObjects/: Fourier  Path  Saint Jalm  fourier_coefficients.txt
fourier_drawing/: __init__.py  abstract.py  colors.py  context.py  curves.py  draw.py  fourier.py  interpolation.py  manager.py  plane.py  polynomial.py  rect.py  tools.py  window.py
fourier_drawing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: abstract.py  curves.py  draw.py  manager.py  plane.py
tests/: test_fourier.py
