[tool.poetry]
name = "fourier_drawing"
version = "0.1.5"
description = ""
authors = ["Marc Partensky <marc.partensky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
numpy = "^1.22.4"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
poetry-dynamic-versioning = "^0.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
